<resources>
    <string name="app_name">Money tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spend_item">Траты</string>
    <string name="category_item">Категории</string>
    <string name="statistics_item">Статистика</string>
    <string name="settings_item">Настройки</string>
    <string name="exit_item">Выход</string>
    <string name="mail_address">solovey_alex1990@mail.ru</string>
    <string name="tools_item">Tools</string>
    <string name="first_and_last_name">Solovev Aleksandr</string>
    <string name="first_item_name">Tools</string>
    <string name="settings_text_fragment">Hello from settings</string>
    <string name="statistics_text_fragment">Hello from statistics</string>
    <string name="expenses_snackbar_message">This is expenses fragment!</string>
    <string name="categories_snackbar_message">This is categories fragment!</string>
    <string name="name_of_button_cancel">Cancel</string>
    <string name="splash_activity_top_text">Money</string>
    <string name="splash_activity_bot_text">Tracker</string>
    <string name="select_categories">Select categories</string>
    <string name="apply_is_true">Category is add</string>
    <string name="add_expense_apply_not_write">Enter data please</string>
    <string name="add_expense_cancel">You pressed cancel</string>
    <string name="name_of_button_add">Add</string>



    <string-array name="categories">
        <item>Furniture</item>
        <item>Electronics</item>
        <item>Clothes</item>
        <item>Foodstufs</item>
        <item>Drugs</item>
        <item>Shoes</item>
        <item>Etc</item>
    </string-array>
</resources>


